Switch case now handles enum constant and filtered Object variables